View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027722 | Community | OCCT:Data Exchange | public | 2016-07-28 16:43 | 2022-01-11 15:18 |
Reporter | eryar | Assigned To | dpasukhi | ||
Priority | normal | Severity | minor | ||
Status | assigned | Resolution | open | ||
Platform | Windows | OS | VC++ 2013 | ||
Product Version | 7.0.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0027722: Data Exchange - STEP error for Ellipse revol shape | ||||
Description | When save a shape made by revol of a ellipse to STEP, then load the step, the shape is wrong, see the attach picture. | ||||
Steps To Reproduce | pload MODELING XDE VISUALIZATION vinit ellipse ge 0 0 20 10 mkedge te ge 0 pi/2.0 revol re te 0 0 0 0 1 0 360 vdisplay te re vtrihedron vt # save to STEP in mode: As Is. stepwrite a re d:/revol.step # read STEP stepread d:/revol.step sr * ttranslate sr_1 50 0 0 vdisplay sr_1 | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde bug27722 | ||||
|
ellipse-revol.png (31,753 bytes) |
|
Problem described in issue is reproduced on current state of OCCT. |
|
revol.png (38,496 bytes) |
|
I have imported the d:/revol.step file into AutoCAD, see the revol.png and the shape looks OK. So I think its the mesh algorithm bug. |
|
Branch CR27722_1 has been created by dpasukhi. SHA-1: 1cd8d5469d0d92b4dca2bd955a508e350a995a99 Detailed log of new commits: Author: dpasukhi Date: Sun Nov 22 23:29:51 2020 +0300 0027722: Data Exchange - STEP error for Ellipse revol shape Add support for calculating singularity for an incorrect revolution |
|
Dear ika, Please review CR27722_1. No regression: http://occt-tests/CR27722-master-dpasukhi-OCCT/Debian80-64/diff_summary.html http://occt-tests/CR27722-master-dpasukhi-OCCT/Windows-64-VC14/diff_summary.html http://occt-tests/CR27722-master-dpasukhi-Products/Debian80-64/diff_summary.html http://occt-tests/CR27722-master-dpasukhi-Products/Windows-64-VC14/diff_summary.html |
|
Branch CR27722_2 has been created by flatgern. SHA-1: f727e23a66577ea24c7db462ab7ffe439e2665e7 Detailed log of new commits: Author: Lawyar Date: Thu Nov 18 15:52:50 2021 +0300 0027722: Data Exchange - STEP error for Ellipse revol shape Bug was fixed by adding new constructor in ShapeAnalysis_Surface class. This constructor gets a TopoDS_Face as a parameter and bounds face with help of BRepTools:UVBounds() |
|
Branch CR27722_2 has been updated forcibly by flatgern. SHA-1: 004934653b50ee87b6a9b50a9a6ac8b74ebbe596 |
|
Branch CR27722_2 has been updated forcibly by flatgern. SHA-1: 36531ebcba87f6bf913558d54564b34e6f6adca1 |
|
+# save to STEP in mode: As Is. +stepwrite a re ${imagedir}/orig.stp This is incorrect to save temporary file like this - ${casename} should be prefixed. +vdisplay sr_1 ... +checkview -screenshot -2d -path ${imagedir}/${test_image}.png
|
|
Solution elaboration This bug is reproducing because of the non-trimmed basis curve of the surface. It is necessary for correct mathematical calculations. This surface is created by the topological trimmed curve and it doesn't have any geometrical limits. In method ComputeSingularities() I created a new condition in which Surface is bounding by BRepTools::UVBounds(). Also, I changed the callable constructor in some places(where it looks more efficient) from: ShapeAnalysis_Surface(const Handle(Geom_Surface)& S) to: ShapeAnalysis_Surface(const TopoDS_Face& theFace) |
|
Branch CR27722_2 has been updated forcibly by flatgern. SHA-1: 8f7f46a0720edbd20b868afde834c1837dd1467b |
|
Branch CR27722_2 has been updated forcibly by flatgern. SHA-1: de69d7c26278d697698e80da87e13885200a0e9d |
|
Analyzing |
|
Branch CR27722_2 has been updated forcibly by flatgern. SHA-1: 9d4d3e970722963469732723c8dc8d1e12a04fe6 |
|
Branch CR27722_2 has been updated forcibly by flatgern. SHA-1: 3b9283d92e0a4b86c169e4bbd2b9255af8b84420 |
|
Analyzing |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-07-28 16:43 | eryar | New Issue | |
2016-07-28 16:43 | eryar | Assigned To | => gka |
2016-07-28 16:43 | eryar | File Added: ellipse-revol.png | |
2017-08-18 12:55 |
|
Test case number | => bugs xde bug27722 |
2017-08-18 12:55 |
|
Note Added: 0069572 | |
2017-08-18 12:55 |
|
Steps to Reproduce Updated | |
2019-11-20 04:34 | eryar | File Added: revol.png | |
2019-12-17 13:29 | kgv | Summary | STEP error for Ellipse revol shape => Data Exchange - STEP error for Ellipse revol shape |
2019-12-17 14:48 | eryar | Note Added: 0089601 | |
2019-12-17 14:48 | eryar | Note Edited: 0089601 | |
2020-04-15 15:15 | gka | Assigned To | gka => dpasukhi |
2020-04-15 15:15 | gka | Status | new => assigned |
2020-11-23 00:02 | git | Note Added: 0096997 | |
2020-11-23 12:21 | dpasukhi | Note Added: 0097007 | |
2020-11-23 12:21 | dpasukhi | Assigned To | dpasukhi => ika |
2020-11-23 12:21 | dpasukhi | Status | assigned => resolved |
2020-11-24 11:25 |
|
Assigned To | ika => dpasukhi |
2020-11-24 11:25 |
|
Status | resolved => assigned |
2020-12-12 07:45 | abv | Relationship added | related to 0028414 |
2020-12-12 09:17 | kgv | Target Version | => 7.6.0 |
2020-12-12 09:17 | kgv | Steps to Reproduce Updated | |
2021-08-31 14:30 | gka | Target Version | 7.6.0 => 7.7.0 |
2021-11-18 19:41 | dpasukhi | Assigned To | dpasukhi => eryar |
2021-11-18 19:41 | dpasukhi | Assigned To | eryar => dpasukhi |
2021-11-18 19:41 | dpasukhi | Assigned To | dpasukhi => user1100 |
2021-11-18 19:42 | git | Note Added: 0105252 | |
2021-11-18 19:42 | git | Note Added: 0105253 | |
2021-11-18 19:44 | git | Note Added: 0105254 | |
2021-11-18 20:00 | kgv | Note Added: 0105258 | |
2021-11-19 18:27 |
|
Note Added: 0105276 | |
2021-11-25 14:59 | git | Note Added: 0105423 | |
2021-11-25 15:08 | git | Note Added: 0105424 | |
2021-11-26 16:02 | dpasukhi | Note Added: 0105452 | |
2021-12-03 19:43 | git | Note Added: 0105636 | |
2021-12-03 20:11 | git | Note Added: 0105638 | |
2021-12-12 23:53 | dpasukhi | Note Added: 0105835 | |
2022-01-11 15:18 | dpasukhi | Assigned To | user1100 => dpasukhi |