0027722: Data Exchange - STEP error for Ellipse revol shape

Add support for calculating singularity for an incorrect revolution